# mediahelper

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: debian-package.yml
debian/: changelog  control  copyright  rules
docs/: apt-publishing.md
mediahelper/: __init__.py  audio.py  cli.py  picker.py  theme.py
